[package]
edition = "2021"
name = "bh2025-rs"
version = "0.1.0"

# [[bin]]
# name = "bh2025-rs"
# path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "=1.0.0-beta.1", features = [
    "esp32c3",
    "log-04",
    "unstable",
] }
log = "0.4.27"

embassy-net = { version = "0.7.0", features = [
    "dhcpv4",
    "log",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-println = { version = "0.14.0", features = ["esp32c3", "log-04"] }
esp-backtrace = { version = "0.16.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
    "log",
    "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["log"] }
esp-hal-embassy = { version = "0.8.1", features = ["esp32c3", "log-04"] }
esp-wifi = { version = "0.14.1", features = [
    "builtin-scheduler",
    "esp-alloc",
    "esp32c3",
    "log-04",
    "smoltcp",
    "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "log",
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
static_cell = { version = "2.1.1", features = ["nightly"] }
micromath = "2.1.0"

# LEDs
smart-leds = "0.4.0"
esp-hal-smartled = "0.15.0"

# Accelerometer
accelerometer = "0.12.0"
lis2dh12 = { version = "0.7.0", features = ["out_f32"] }

embedded-graphics-core = "0.4.0"
embedded-graphics = "0.8.1"
tinybmp = "0.6.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
